[FIX]:UpdateRequest 필드명 변경